[Fix] Broken CSS

--- a/inject.css
+++ b/inject.css
@@ -4,6 +4,8 @@
 
 .css-1dbjc4n.r-g6ijar.r-74htps.r-1867qdf.r-1phboty.r-rs99b7.r-1ifxtd0.r-1udh08x,
 .css-1dbjc4n.r-g6ijar.r-74htps.r-1867qdf.r-1phboty.r-rs99b7.r-1ifxtd0.r-1bro5k0.r-1udh08x,
+.css-4rbku5.css-18t94o4.css-1dbjc4n.r-1habvwh.r-1loqt21.r-6koalj.r-eqz5dr.r-16y2uox.r-1ny4l3l.r-rjfia.r-13qz1uu[href="/explore"],
+.css-4rbku5.css-18t94o4.css-1dbjc4n.r-1habvwh.r-1loqt21.r-6koalj.r-eqz5dr.r-16y2uox.r-1ny4l3l.r-rjfia.r-13qz1uu[href="/i/verified-choose"],
 .css-4rbku5.css-18t94o4.css-1dbjc4n.r-1habvwh.r-1loqt21.r-6koalj.r-eqz5dr.r-16y2uox.r-1ny4l3l.r-oyd9sg.r-13qz1uu[href="/explore"],
 .css-4rbku5.css-18t94o4.css-1dbjc4n.r-1habvwh.r-1loqt21.r-6koalj.r-eqz5dr.r-16y2uox.r-1ny4l3l.r-oyd9sg.r-13qz1uu[href="/i/verified-choose"],
 .css-1dbjc4n.r-1habvwh .css-1dbjc4n.r-dnmrzs.r-1vvnge1 {
